# StringCompare

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  MANIFEST.in  README.ipynb  README.md  README.rst  dockertest.sh  environment.yml  makefile  pypackage.toml  setup.cfg  setup.py  test.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: dev.md  release.md
.github/workflows/: codecov.yml  python-package-conda.yml  python-package-general.yml
docs/: .buildinfo  AUTHORS.html  CONTRIBUTING.html  CONTRIBUTING.rst  Makefile  README.html  README.rst  changelog.html  conf.py  contributing.html  genindex.html  index.html  index.rst  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_modules/: index.html
docs/_sources/: CONTRIBUTING.rst.txt  README.rst.txt  changelog.rst.txt  index.rst.txt  usage.rst.txt
docs/source/: index.html  modules.html  modules.rst  setup.html  stringcompare.distance.html  stringcompare.html  stringcompare.preprocessing.html  stringcompare.tokenizer.html  tests.html
documentation/: CONTRIBUTING.rst  Makefile  README.rst  conf.py  make.bat
documentation/source/: conf.py  modules.rst  (+4 more)
examples/: 1-getting-started.ipynb  2-benchmark.ipynb
source/: stringcompare.distance.rst
stringcompare/: __init__.py  dameraulevenshtein.py
tests/: test_characterdifference.py  test_damerau_levenshtein.py  test_hamming.py  test_jaro_winkler.py  test_lcs.py  test_levenshtein.py
(+67 files in other folders)
