[metadata]
name = stringcompare
author = Olivier Binette
author-email = olivier.binette@gmail.com
version = attr: stringcompare.__version__
description = String
license = GPL 3
keywords = record-linkage, string-distance, edit-distance, levenshtein, string-matching
url = https://github.com/OlivierBinette/StringCompare

[options]
include_package_data = True
packages = find:
install_requires = 
    numpy
    scipy
    pandas
    igraph
    sklearn
    pybind11

[options.package_data]
* = *.csv
