[metadata]
version = attr: stringcompare.__version__
description = String
license = GPL 3
license_files = LICENSE
keywords = record-linkage, string-distance, edit-distance, levenshtein, string-matching
url = https://github.com/OlivierBinette/StringCompare

[options]
include_package_data = True
packages = find:

[options.package_data]
* = *.csv
